[gd_scene load_steps=8 format=3 uid="uid://ba1g0nbs3orjx"]

[ext_resource type="Script" uid="uid://cov1mb103pb6x" path="res://UI/LeaderboardEntry/LeaderboardEntry.gd" id="1_767kj"]
[ext_resource type="Texture2D" uid="uid://b70dd5yx8r6mj" path="res://Images/Panels.png" id="1_gd3yf"]
[ext_resource type="FontFile" uid="uid://d2pcyluki87vl" path="res://UI/PeaberryBase.ttf" id="2_gpdh6"]

[sub_resource type="LabelSettings" id="LabelSettings_qdhqt"]
font = ExtResource("2_gpdh6")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_e0smp"]
font = ExtResource("2_gpdh6")
font_size = 40
font_color = Color(1, 1, 0.556863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l8w71"]
font = ExtResource("2_gpdh6")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_rppqr"]
font = ExtResource("2_gpdh6")
font_size = 25

[node name="Control" type="Control"]
custom_minimum_size = Vector2(817, 177)
layout_mode = 3
anchors_preset = 0
offset_right = 817.0
offset_bottom = 177.0
script = ExtResource("1_767kj")
metadata/_edit_horizontal_guides_ = [57.0]
metadata/_edit_vertical_guides_ = [48.0]

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 1
offset_right = 206.0
offset_bottom = 45.0
scale = Vector2(4, 4)
texture = ExtResource("1_gd3yf")
region_rect = Rect2(95, 21, 35, 15)
patch_margin_left = 12
patch_margin_top = 10
patch_margin_right = 13
patch_margin_bottom = 9

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 48.0
offset_top = 25.0
offset_right = -30.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="Rank" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_qdhqt")

[node name="UserLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pata"
label_settings = SubResource("LabelSettings_e0smp")
clip_text = true
text_overrun_behavior = 1

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "123123"
label_settings = SubResource("LabelSettings_qdhqt")
horizontal_alignment = 2

[node name="WaterWastedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 121.0
offset_right = 661.0
offset_bottom = 151.0
text = "Water dranked 21312ml"
label_settings = SubResource("LabelSettings_l8w71")

[node name="WaterConsumedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 78.0
offset_right = 658.0
offset_bottom = 104.0
text = "Water wasted 232434ml"
label_settings = SubResource("LabelSettings_rppqr")
